wso2am/apim/cf-dev.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

AWSTemplateFormatVersion: 2010-09-09
Description: >-
  WSO2 API Manager Clustered deployment in Development with High Availability
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Cluster Configuration
        Parameters:
          - AWSAccessKeyId
          - AWSAccessKeySecret
          - KeyPairName
          - WSO2InstanceType
      - Label:
          default: Network Configuration
        Parameters:
          - CertificateName
      - Label:
          default: Database Configuration
        Parameters:
          - DBUsername
          - DBPassword
          - DBType
      - Label:
          default: Environment Configurations
        Parameters:
          - Environment
      - Label:
          default: VPC Configuration for Dev,Staging
        Parameters:
          - VPCID
      - Label:
          default: Internet Gateway
        Parameters:
          - InternetGateway
      - Label:
          default: Jenkins Subnet
        Parameters:
          - JenkinsSubnet
    ParameterLabels:
      AWSAccessKeyId:
        default: AWS Access Key ID
      AWSAccessKeySecret:
        default: AWS Access Secret Key
      CertificateName:
        default: SSL Certificate Name
      KeyPairName:
        default: Key Pair Name
      DBUsername:
        default: Username
      DBPassword:
        default: Password
      WSO2InstanceType:
        default: Instance Type
      AMIid:
        default: AMI ID
      Product:
        default: Product
      Version:
        default: Version
      Environment:
        default: Environment
      VPCID:
        default: VPC ID
      InternetGateway:
        default: InternetGateway id
      JenkinsSubnet:
        default: Jenkins Subnet id
Resources:
  # networking configurations
  
  WSO2PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCID
      CidrBlock: 10.0.250.0/24
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
  WSO2PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCID
      CidrBlock: 10.0.252.0/24
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
  WSO2PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPCID
  WSO2PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2PublicRouteTable
      SubnetId: !Ref WSO2PublicSubnet1
  WSO2PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2PublicRouteTable
      SubnetId: !Ref WSO2PublicSubnet2
  WSO2PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref WSO2PublicRouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: 0.0.0.0/0
  WSO2PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCID
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
  WSO2PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCID
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
  WSO2PrivateSubnetRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPCID
  WSO2PrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref WSO2NATGateway
      RouteTableId: !Ref WSO2PrivateSubnetRouteTable
  WSO2PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2PrivateSubnetRouteTable
      SubnetId: !Ref WSO2PrivateSubnet1
  WSO2PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2PrivateSubnetRouteTable
      SubnetId: !Ref WSO2PrivateSubnet2
  WSO2NATGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt
        - WSO2EIP
        - AllocationId
      SubnetId: !Ref WSO2PublicSubnet1
  WSO2EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  # database configurations
  WSO2DBInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: DB Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0
  WSO2DBInstance:
    Type: 'AWS::RDS::DBInstance'
    DeletionPolicy: Delete
    Properties:
      VPCSecurityGroups:
        - !Ref WSO2DBInstanceSecurityGroup
      DBInstanceClass: db.t2.medium
      AllocatedStorage: 5
      BackupRetentionPeriod: '0'
      DBInstanceIdentifier: !Join
        - ''
        - - 'WSO2APIMDB'
          - !Ref Environment
          - 'Instance'
      DBName: WSO2_DB
      Engine: !Ref DBType
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      MultiAZ: 'false'
      StorageType: gp2
      DBSubnetGroupName: !Ref WSO2DBSubnetGroup
  WSO2DBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: DB Subnet Group
      SubnetIds:
        - !Ref WSO2PrivateSubnet1
        - !Ref WSO2PrivateSubnet2
  # File system configurations
  WSO2EFSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: EFS Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: 0.0.0.0/0
  WSO2EFSFileSystem:
    Type: 'AWS::EFS::FileSystem'
    Properties:
      PerformanceMode: generalPurpose
  WSO2PrivateSubnet1EFSMountTarget:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref WSO2PrivateSubnet1
      FileSystemId: !Ref WSO2EFSFileSystem
      SecurityGroups:
        - !Ref WSO2EFSSecurityGroup
  WSO2PrivateSubnet2EFSMountTarget:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref WSO2PrivateSubnet2
      FileSystemId: !Ref WSO2EFSFileSystem
      SecurityGroups:
        - !Ref WSO2EFSSecurityGroup
  WSO2JenkinsSubnetEFSMountTarget:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref JenkinsSubnet
      FileSystemId: !Ref WSO2EFSFileSystem
      SecurityGroups:
        - !Ref WSO2EFSSecurityGroup
  # Product configurations
  BastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: WSO2 Bastion node Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WSO2LoggingSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: WSO2 Logging Security Group
      GroupName: WSO2LoggingSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5601
          ToPort: 5601
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup
        - IpProtocol: tcp
          FromPort: 5044
          ToPort: 5044
          CidrIp: 0.0.0.0/0
  WSO2SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: WSO2 Enterprise Integrator Security Group
      GroupName: WSO2SecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9200
          ToPort: 9200
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          SourceSecurityGroupId: !Ref WSO2LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          SourceSecurityGroupId: !Ref WSO2LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          SourceSecurityGroupId: !Ref WSO2LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          SourceSecurityGroupId: !Ref WSO2LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: '5672'
          ToPort: '5672'
          SourceSecurityGroupId: !Ref WSO2LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: '4100'
          ToPort: '4100'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
  WSO2BastionInstance:
    Type: 'AWS::EC2::Instance'
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: PT10M
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !Ref AMIid
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WSO2Bastion'
              - !Ref Environment
              - 'Instance'
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          AssociatePublicIpAddress : 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref WSO2PublicSubnet1
          GroupSet:
            - !Ref BastionSecurityGroup
      UserData: !Base64
        'Fn::Sub': |
          Content-Type: multipart/mixed; boundary="//"
          MIME-Version: 1.0

          --//
          Content-Type: text/cloud-config; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="cloud-config.txt"

          #cloud-config
          cloud_final_modules:
          - [scripts-user, always]

          --//
          Content-Type: text/x-shellscript; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="userdata.txt"

          #!/bin/bash
          export PATH=~/.local/bin:$PATH
          apt-get update
          pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
          export DB_HOSTNAME=${WSO2DBInstance.Endpoint.Address}
          export DB_PORT=${WSO2DBInstance.Endpoint.Port}
          export DB_USERNAME=${DBUsername}
          export DB_PASSWORD=${DBPassword}
          sed -i "s/CF_DB_USERNAME/${DBUsername}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          sed -i "s/CF_DB_PASSWORD/${DBPassword}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          sed -i "s/CF_DB_HOST/${WSO2DBInstance.Endpoint.Address}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          sed -i "s/CF_DB_PORT/${WSO2DBInstance.Endpoint.Port}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          bash /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh 2>&1 | tee /home/wso2user/db_log.txt
          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
          cat /dev/null > ~/.bash_history && history -c
          /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2BastionInstance --region ${AWS::Region}
  # WSO2Node1LaunchConfiguration:
  #   Type: 'AWS::AutoScaling::LaunchConfiguration'
  #   Properties:
  #     ImageId: !Ref AMIid
  #     InstanceType: !Ref WSO2InstanceType
  #     InstanceMonitoring: 'false'
  #     BlockDeviceMappings:
  #       - DeviceName: /dev/sda1
  #         Ebs:
  #           VolumeSize: '20'
  #           VolumeType: gp2
  #           DeleteOnTermination: 'true'
  #     KeyName: !Ref KeyPairName
  #     SecurityGroups:
  #       - !Ref WSO2SecurityGroup
  #     UserData: !Base64
  #       'Fn::Sub': |
  #         Content-Type: multipart/mixed; boundary="//"
  #         MIME-Version: 1.0

  #         --//
  #         Content-Type: text/cloud-config; charset="us-ascii"
  #         MIME-Version: 1.0
  #         Content-Transfer-Encoding: 7bit
  #         Content-Disposition: attachment; filename="cloud-config.txt"

  #         #cloud-config
  #         cloud_final_modules:
  #         - [scripts-user, always]

  #         --//
  #         Content-Type: text/x-shellscript; charset="us-ascii"
  #         MIME-Version: 1.0
  #         Content-Transfer-Encoding: 7bit
  #         Content-Disposition: attachment; filename="userdata.txt"

  #         #!/bin/bash
  #         export PATH=~/.local/bin:$PATH
  #         apt-get update >> /home/wso2user/install.log
  #         apt install -y nfs-common >> /home/wso2user/install.log
  #         pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
  #         wget --no-check-certificate --no-proxy 'http://wso2-cloudformation-templates.s3.amazonaws.com/private_ip_extractor.py' -P /usr/local/bin/
  #         unzip /home/wso2user/${Product}-${Version}.zip -d /home/wso2user/
  #         sed -i "s/ACCESS_KEY/${AWSAccessKeyId}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
  #         sed -i "s/REGION_NAME/${AWS::Region}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
  #         sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/carbon.xml
  #         sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/deployment/server/jaggeryapps/store/site/conf/site.json
  #         sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/api-manager.xml
  #         sed -i "s/CF_DB_USERNAME/${DBUsername}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
  #         sed -i "s/CF_DB_PASSWORD/${DBPassword}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
  #         sed -i "s/RDS_DNS_NAME/${WSO2DBInstance.Endpoint.Address}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
  #         sed -i "s^SECRET_KEY^${AWSAccessKeySecret}^g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
  #         tar -xvf /opt/OpenJDK8U-jdk_8u222_linux_x64.tar.gz -C /opt/
  #         export PRIVATE_IP=$(ifconfig | grep -m 1 'inet ' | awk '{print $2}')
  #         export LogserverIP=${LoggingInstanceDev.PrivateIp}
  #         echo "$LogserverIP logserver" >> /etc/hosts
  #         sed -i "s/LOCAL-MEMBER-HOST/$PRIVATE_IP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
  #         sed -i "s/WSO2SecurityGroup/$SECURITYGROUP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
  #         mkdir -p /mnt/efs
  #         mount -t nfs4 -o nfsvers=4.1 ${WSO2EFSFileSystem}.efs.${AWS::Region}.amazonaws.com:/ /mnt/efs
  #         sleep 450
  #         if [ ! -d "/mnt/efs/server" ]; then
  #             mkdir -p /mnt/efs/server
  #             cp -r /home/wso2user/${Product}-${Version}/repository/deployment/server /mnt/efs
  #         fi
  #         rm -rf  /home/wso2user/${Product}-${Version}/repository/deployment/server
  #         ln -s /mnt/efs/server /home/wso2user/${Product}-${Version}/repository/deployment/server
  #         if [ ! -d "/mnt/efs/tenants" ]; then
  #             mkdir -p /mnt/efs/tenants
  #             cp -r /home/wso2user/${Product}-${Version}/repository/tenants /mnt/efs
  #         fi
  #         rm -rf /home/wso2user/${Product}-${Version}/repository/tenants
  #         ln -s /mnt/efs/tenants /home/wso2user/${Product}-${Version}/repository/tenants
  #         echo "${WSO2EFSFileSystem}:/ /mnt/efs efs defaults,_netdev 0 0" >> /etc/fstab
  #         /home/wso2user/${Product}-${Version}/bin/wso2server.sh start
  #         sleep 30
  #         end=$((SECONDS+1200))
  #         while [ $SECONDS -lt $end ] ; do
  #             sleep 10
  #             wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
  #             if [ $? -eq "0" ] ; then
  #               /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2Node1AutoScalingGroup --region ${AWS::Region}
  #               break
  #             fi
  #         done
  #         echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
  #         cat /dev/null > ~/.bash_history && history -c
  #   DependsOn:
  #     - WSO2SecurityGroup
  #     - WSO2LoadBalancer
  #     - WSO2DBInstance
  #     - WSO2BastionInstance
  #     - LoggingInstanceDev
  # WSO2Node1AutoScalingGroup:
  #   Type: 'AWS::AutoScaling::AutoScalingGroup'
  #   Properties:
  #     LaunchConfigurationName: !Ref WSO2Node1LaunchConfiguration
  #     DesiredCapacity: 1
  #     MinSize: 1
  #     MaxSize: 2
  #     TargetGroupARNs:
  #       - !Ref WSO2ALBTargetGroup
  #       - !Ref WSO28243ALBTargetGroup
  #     VPCZoneIdentifier:
  #       - !Ref WSO2PrivateSubnet1
  #     Tags:
  #       - Key: Name
  #         Value: !Join
  #           - ''
  #           - - 'WSO2APIM'
  #             - !Ref Environment
  #             - 'Instance01'
  #         PropagateAtLaunch: 'true'
  #       - Key: cluster
  #         Value: apim
  #         PropagateAtLaunch: 'true'
  #   CreationPolicy:
  #     ResourceSignal:
  #       Count: 1
  #       Timeout: PT30M
  #   UpdatePolicy:
  #     AutoScalingRollingUpdate:
  #       MaxBatchSize: '2'
  #       MinInstancesInService: '1'
  #       PauseTime: PT20M
  #       SuspendProcesses:
  #         - AlarmNotification
  #       WaitOnResourceSignals: true
  #   DependsOn:
  #     - WSO2LoadBalancer
  WSO2Node2LaunchConfiguration:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !Ref AMIid
      InstanceType: !Ref WSO2InstanceType
      InstanceMonitoring: 'false'
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref WSO2SecurityGroup
      UserData: !Base64
        'Fn::Sub': |
          Content-Type: multipart/mixed; boundary="//"
          MIME-Version: 1.0

          --//
          Content-Type: text/cloud-config; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="cloud-config.txt"

          #cloud-config
          cloud_final_modules:
          - [scripts-user, always]

          --//
          Content-Type: text/x-shellscript; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="userdata.txt"

          #!/bin/bash
          echo "$(date) starting script" >> /tmp/userdata.log
          export PATH=~/.local/bin:$PATH
          apt-get update >> /home/wso2user/install.log
          apt install -y nfs-common >> /home/wso2user/install.log
          pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
          wget --no-check-certificate --no-proxy 'http://wso2-cloudformation-templates.s3.amazonaws.com/private_ip_extractor.py' -P /usr/local/bin/
          unzip /home/wso2user/${Product}-${Version}.zip -d /home/wso2user/
          sed -i "s/ACCESS_KEY/${AWSAccessKeyId}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          sed -i "s/REGION_NAME/${AWS::Region}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/carbon.xml
          sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/deployment/server/jaggeryapps/store/site/conf/site.json
          sed -i "s/ALB_DNS_NAME/${WSO2LoadBalancer.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/api-manager.xml
          sed -i "s/CF_DB_USERNAME/${DBUsername}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
          sed -i "s/CF_DB_PASSWORD/${DBPassword}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
          sed -i "s/RDS_DNS_NAME/${WSO2DBInstance.Endpoint.Address}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
          sed -i "s^SECRET_KEY^${AWSAccessKeySecret}^g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          tar -xvf /opt/OpenJDK8U-jdk_8u222_linux_x64.tar.gz -C /opt/
          export PRIVATE_IP=$(ifconfig | grep -m 1 'inet ' | awk '{print $2}')
          export LogserverIP=${LoggingInstanceDev.PrivateIp}
          echo "$LogserverIP logserver" >> /etc/hosts
          sed -i "s/LOCAL-MEMBER-HOST/$PRIVATE_IP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          sed -i "s/WSO2SecurityGroup/$SECURITYGROUP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          mkdir -p /mnt/efs
          #start mounting
          echo "$(date) start mounting" >> /tmp/userdata.log
          mount -t nfs4 -o nfsvers=4.1 ${WSO2EFSFileSystem}.efs.${AWS::Region}.amazonaws.com:/ /mnt/efs
          echo "$(date) mount done" >> /tmp/userdata.log
          #mount done
          #sleep 450
          if [ ! -d "/mnt/efs/server" ]; then
              mkdir -p /mnt/efs/server
              cp -r /home/wso2user/${Product}-${Version}/repository/deployment/server /mnt/efs
          fi
          rm -rf  /home/wso2user/${Product}-${Version}/repository/deployment/server
          ln -s /mnt/efs/server /home/wso2user/${Product}-${Version}/repository/deployment/server
          if [ ! -d "/mnt/efs/tenants" ]; then
              mkdir -p /mnt/efs/tenants
              cp -r /home/wso2user/${Product}-${Version}/repository/tenants /mnt/efs
          fi
          rm -rf /home/wso2user/${Product}-${Version}/repository/tenants
          ln -s /mnt/efs/tenants /home/wso2user/${Product}-${Version}/repository/tenants

          #Add jar libs
          if [ ! -d "/mnt/efs/lib" ]; then
              mkdir -p /mnt/efs/lib
              cp -r /home/wso2user/${Product}-${Version}/repository/components/lib /mnt/efs
          fi

          rm -rf /home/wso2user/${Product}-${Version}/repository/components/lib
          ln -s /mnt/efs/lib /home/wso2user/${Product}-${Version}/repository/components/lib


          echo "${WSO2EFSFileSystem}:/ /mnt/efs efs defaults,_netdev 0 0" >> /etc/fstab
          /home/wso2user/${Product}-${Version}/bin/wso2server.sh start
          #sleep 30

          echo "$(date) start sending request" >> /tmp/userdata.log
          end=$((SECONDS+1200))
          while [ $SECONDS -lt $end ] ; do
              sleep 1
              # remove wait times and go diretly to the loop with no sleeps inside
              wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
              if [ $? -eq "0" ] ; then
                /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2Node2AutoScalingGroup --region ${AWS::Region}
                break
              fi
          done
          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
          cat /dev/null > ~/.bash_history && history -c
          echo "$(date) finished" >> /tmp/userdata.log
    DependsOn:
      - WSO2SecurityGroup
      - WSO2LoadBalancer
      #- WSO2VPCInternetGatewayAttachment
      - WSO2DBInstance
      - WSO2BastionInstance
      - LoggingInstanceDev
  WSO2Node2AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref WSO2Node2LaunchConfiguration
      DesiredCapacity: 2
      MinSize: 2
      MaxSize: 2
      TargetGroupARNs:
        - !Ref WSO2ALBTargetGroup
        - !Ref WSO28243ALBTargetGroup
      VPCZoneIdentifier:
        - !Ref WSO2PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WSO2APIM'
              - !Ref Environment
              - 'Instance02'
          PropagateAtLaunch: 'true'
        - Key: cluster
          Value: apim
          PropagateAtLaunch: 'true'
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: PT30M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: '2'
        MinInstancesInService: '1'
        PauseTime: PT20M
        SuspendProcesses:
          - AlarmNotification
        WaitOnResourceSignals: true
    DependsOn:
      - WSO2LoadBalancer
  WSO2LoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: WSO2 ALB Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '4100'
          ToPort: '4100'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '4100'
          ToPort: '4100'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
  WSO2LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Join
        - ''
        - - 'WSO2LoadBalancer'
          - !Ref Environment
      Scheme: internet-facing
      Subnets:
        - !Ref WSO2PublicSubnet1
        - !Ref WSO2PublicSubnet2
      SecurityGroups:
        - !Ref WSO2LoadBalancerSecurityGroup
  WSO2ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckProtocol: HTTPS
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 4
      HealthCheckPath: /carbon/admin/login.jsp
      HealthCheckPort: 9443
      Matcher:
        HttpCode: 200
      Name: !Join
        - '-'
        - - 'carbon'
          - !Ref Environment
          - '9443'
      Port: 9443
      Protocol: HTTPS
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '20'
        - Key: stickiness.enabled
          Value: 'true'
      UnhealthyThresholdCount: 3
      VpcId:
        Ref: VPCID
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref Product
  WSO28243ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckProtocol: HTTPS
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 4
      HealthCheckPath: /services/Version
      HealthCheckPort: 8243
      Matcher:
        HttpCode: 200
      Name: !Join
        - '-'
        - - 'carbon'
          - !Ref Environment
          - '8243'
      Port: 8243
      Protocol: HTTPS
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '20'
        - Key: stickiness.enabled
          Value: 'true'
      UnhealthyThresholdCount: 3
      VpcId:
        Ref: VPCID
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref Product
  WSO2ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WSO2ALBTargetGroup
      Certificates:
        - CertificateArn: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
      LoadBalancerArn: !Ref WSO2LoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS-1-1-2017-01
    DependsOn:
      - WSO2LoadBalancerSecurityGroup
  WSO28243ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WSO28243ALBTargetGroup
      Certificates:
        - CertificateArn: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
      LoadBalancerArn: !Ref WSO2LoadBalancer
      Port: 8243
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS-1-1-2017-01
    DependsOn:
      - WSO2LoadBalancerSecurityGroup
  WSO2ALB9443Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WSO2ALBTargetGroup
      Certificates:
        - CertificateArn: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
      LoadBalancerArn: !Ref WSO2LoadBalancer
      Port: 9443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS-1-1-2017-01
    DependsOn:
      - WSO2LoadBalancerSecurityGroup
  LoggingInstanceDev:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !FindInMap
        - WSO2LoggingMasterAMIRegionMap
        - !Ref 'AWS::Region'
        - Ubuntu1804
      InstanceType: t2.large
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '50'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WSO2Logging'
              - !Ref Environment
              - 'Instance'
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          AssociatePublicIpAddress: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref WSO2PublicSubnet1
          GroupSet:
            - !Ref WSO2LoggingSecurityGroup
      UserData: !Base64
        'Fn::Sub': |
          #cloud-config
          #!/bin/bash
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          export PATH=~/.local/bin:$PATH
          export REGION=${AWS::Region}
          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
          cat /dev/null > ~/.bash_history && history -c
    DependsOn:
      - WSO2SecurityGroup
      - WSO2LoadBalancer
      #- WSO2VPCInternetGatewayAttachment
      - WSO2DBInstance
  WSO2TransitGateway:
    Type: "AWS::EC2::TransitGateway"
    Properties:
      AutoAcceptSharedAttachments: enable
      DefaultRouteTableAssociation: enable
      DefaultRouteTablePropagation: enable
      Description: WSO2 Transit Gateway 
      DnsSupport: enable
      VpnEcmpSupport: enable
      Tags: 
        - Key: Name
          Value: WSO2 Transit Gateway

  WSO2DevTransitGatewayAttachment:    
    Type: "AWS::EC2::TransitGatewayAttachment"
    Properties:
      SubnetIds: 
        - !Ref JenkinsSubnet
      Tags: 
        - Key: Name
          Value: WSO2 Transite Gateway
      TransitGatewayId: !Ref WSO2TransitGateway
      VpcId: !Ref VPCID
  
Outputs:
  ConsoleURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2LoadBalancer
          - DNSName
        - '/carbon'
    Description: WSO2 API Manager Management Console URL
  PublisherURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2LoadBalancer
          - DNSName
        - '/publisher'
    Description: WSO2 APIM Publisher URL for API development and management
  StoreURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2LoadBalancer
          - DNSName
        - '/store'
    Description: WS02 APIM Store Web application URL (Developer Store)
  AdminURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2LoadBalancer
          - DNSName
        - '/admin'
    Description: WSO2 APIM Admin service URL
  HttpsURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2LoadBalancer
          - DNSName
        - ':8243'
    Description: WSO2 APIM HTTPS Gateway endpoint
  HttpURL:
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt
          - WSO2LoadBalancer
          - DNSName
        - ':8280'
    Description: APIM HTTP Gateway endpoint
  LogDashboardURL:
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt
          - LoggingInstanceDev
          - PublicDnsName
        - ':5601'
    Description: Log Dashboard URL (Kibana Dashboard)
  EFSID:
    Value: !Ref WSO2EFSFileSystem
    Description: EFS ID
Parameters:
  AWSAccessKeyId:
    Type: String
  AWSAccessKeySecret:
    Type: String
  KeyPairName:
    Description: The private key used to log in to instances through SSH
    Type: 'AWS::EC2::KeyPair::KeyName'
  CertificateName:
    Description: A valid SSL certificate used for HTTPS
    Type: String
    MinLength: 1
  WSO2InstanceType:
    Type: String
    Default: t2.medium
    AllowedValues:
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
      - m3.medium
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - m4.large
      - m4.xlarge
    ConstraintDescription: Must be a valid EC2 instance type
  DBUsername:
    Type: String
  DBPassword:
    Type: String
    NoEcho: true
  DBType:
    Type: String
    Default: MySQL
    AllowedValues:
      - MySQL
      - PostgreSQL
      - Oracle
      - SQL Server
  AMIid:
    Type: String
  Product:
    Type: String
  Version:
    Type: String
  Environment:
    Type: String
  VPCID:
    Type: String
    AllowedPattern: '.+'
    ConstraintDescription: Mandatory field
  InternetGateway:
     Type: String
     AllowedPattern: '.+'
     ConstraintDescription: Mandatory field
  JenkinsSubnet:
     Type: String
     AllowedPattern: '.+'
     ConstraintDescription: Mandatory field
Mappings:
  WSO2LoggingMasterAMIRegionMap:
    us-east-1:
      Ubuntu1804: ami-089c43fe12d048b25
    us-east-2:
      Ubuntu1804: ami-0b382084a3cc80fb7
    us-west-1:
      Ubuntu1804: ami-0b6d9c2c447ab4299
    us-west-2:
      Ubuntu1804: ami-0897dc385cc87c84a
    ap-south-1:
      Ubuntu1804: ami-092e3cdeac40647ef
    ap-northeast-1:
      Ubuntu1804: ami-0e188a8f0a17f5359
    ap-northeast-2:
      Ubuntu1804: ami-017825b1c521d02c5
    ap-southeast-1:
      Ubuntu1804: ami-0a15b160762a9664b
    ap-southeast-2:
      Ubuntu1804: ami-0b7e0a634a1356911
    ca-central-1:
      Ubuntu1804: ami-0ef8ecec9501bf050
    eu-central-1:
      Ubuntu1804: ami-0521c2773875c9f2e
    eu-west-1:
      Ubuntu1804: ami-0d63a1ebc624058cd
    eu-west-2:
      Ubuntu1804: ami-0e8752d4902c13a57
    eu-west-3:
      Ubuntu1804: ami-0b48a1bd6d96eba46
    eu-north-1:
      Ubuntu1804: ami-05805bdf26a4afe6c
    sa-east-1:
      Ubuntu1804: ami-0393cec4dc744d66d
